--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.27)
 project(PJCProject)
 
 set(CMAKE_CXX_STANDARD 20)
+#potrzebne do uruchomienia w cmd
+set(CMAKE_EXE_LINKER_FLAGS "-static")
 
 include(FetchContent)
 
@@ -12,6 +14,7 @@ FetchContent_Declare(
 )
 
 FetchContent_MakeAvailable(fmt)
+
 
 add_executable(PJCProject
         main.cpp
